Fix the runner social text resize overflow bug, kinda

--- a/src/sass/transition.scss
+++ b/src/sass/transition.scss
@@ -8,6 +8,7 @@
 }
 
 .wipe-enter-active {
+  animation-delay: 1s;
   animation: 1s cubic-bezier(.25, 1, .30, 1) wipe-enter-active both;
 }
 
@@ -21,6 +22,7 @@
 }
 
 .wipe-leave-active {
+  animation-delay: 1s;
   animation: 1s cubic-bezier(.25, 1, .30, 1) wipe-leave-active both;
 }
 
